compiler-tests/src/test/data/diagnostic/functioninject/CannotHaveExtensionReceivers.kt
// RENDER_DIAGNOSTICS_FULL_TEXT
@Inject
fun <!FUNCTION_INJECT_ERROR!>String<!>.Example() {

}
